Code improvements/cleanup. Adaptive Difficulty fix